# GY4006

./: .buildinfo  .gitignore  README.md  _config.yml  _toc.yml  genindex.html  objects.inv  pyproject.toml  requirements.txt
_build/.doctrees/: README.doctree  environment.pickle
_build/html/: README.html  genindex.html  index.html  search.html  searchindex.js
docs/: README.md  _config.yml
docs/exercises/: 01_Adding_Rivers_Lakes.md  02_Adding_water_level_monitors.md  03_Adding_The_AOIs.md  04_Adding_basemap.md  05_CRS.md  06_lake_symbology.md  07_river_symbology.md  08_your_AOI.md  09_AOI_symbology.md  10_AOI_buffer.md  11_clipping_rivers_lakes.md  12_clip_water_level_monitors.md  13_monitors_symbology.md  14_Adding_DEM.md  15_clip_DEM.md  16_DEM_hillshade.md  17_water_levels.md  18_flood_risk_map.md  26_join_census.md  30_digitising.md  31_self_directed.md  33_second_print_layout.md  start.md
gy4006/: GY4006_10_Multi-band_Raster_Data-Passive_Remote_Sensing.ipynb  GY4006_1_Geospatial_Software_and_Programming_Languages.ipynb  GY4006_2_Data_Types.ipynb  GY4006_3_Vector_Data.ipynb  GY4006_4_Attribute_Data.ipynb  GY4006_5_Coordinate_Reference_Systems.ipynb  GY4006_6_Geospatial_Data_Files.ipynb  GY4006_7_Vector_Geoprocessing.ipynb  GY4006_8_Introduction_To_Raster_Data.ipynb  GY4006_9_Single-band_Raster_Data.ipynb  GY4006_Exercise_and_Assignment.md  README.md  _config.yml  _toc.yml
gy4006/exercises/: 00_template.md  01_Adding_Rivers_Lakes.html  01_Adding_Rivers_Lakes.md  02_Adding_water_level_monitors.html  03_Adding_The_AOIs.html  04_Adding_basemap.html  05_CRS.html  (+34 more)
(+256 files in other folders)
