[tool.poetry]
name = "gy4006"
version = "0.1.0"
description = ""
authors = ["bamacgabhann <127785144+breandan.macgabhann@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter-book = "^1.0.4.post1"
geopandas = "^1.0.1"
matplotlib = "^3.10.1"
shapely = "^2.0.7"
osmnx = "^2.0.1"
movingpandas = "^0.21.2"
numpy = "^2.2.3"
rasterio = "^1.4.3"
earthpy = "^0.9.4"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
